--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-parallax-tilt": "^1.7.225",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
