--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.1.9",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
@@ -14,7 +16,9 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.10",
     "typewriter-effect": "^2.21.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
